# interpretability-llms-agents-nxtf

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
implementations/bias_fairness_analysis/: pyproject.toml
implementations/bias_fairness_analysis/src/: download_data.py
implementations/implementation_d/: 01_dataset_construction.ipynb  01_intoduction_and_dataset_construction.ipynb  02_inference_runner.ipynb  03_dpo_pair_construction.ipynb  04_dpo_training.ipynb  05_evaluation.ipynb  README.md  dpo_req.txt
implementations/implementation_d/utils/: dataset_helpers.py  dpo_helpers.py  dpo_training_helpers.py  evaluation_helpers.py  inference_helpers.py
implementations/mechanistic_interpretability/: Mechanistic_Interpretability_LLM_Tutorial.ipynb  Mechanistic_Interpretability_VLM_Tutorial.ipynb  README.md
implementations/multimedia_rag/: README.md  multimedia_rag.ipynb  pyproject.toml
implementations/multimedia_rag/src/: dataset_utils.py  inference.py  media_utils.py  meta_agent.py  segmentation_utils.py  system_utils.py
implementations/multimedia_rag/src/model/: QwenOmni.py  __init__.py  avrag.py  base.py
implementations/preference_alignment/: 05_evaluation.ipynb  README.md
implementations/sme_capitalAllocation/: COMMANDS.md  datasources.md  pyproject.toml
implementations/sme_capitalAllocation/src/sme_capital_eval/agents/: aggregator_agent.py  benchmark_agent.py  governance_agent.py  planner_agent.py  sponsor_agent.py
implementations/sme_capitalAllocation/src/sme_capital_eval/agents/prompts/: aggregator.txt  benchmark.txt  governance.txt  planner.txt  sponsor.txt
implementations/sme_capitalAllocation/src/sme_capital_eval/data_engineering/: ingest_finqa.py  ingest_policy_docs.py  ingest_sfgsme.py  ingest_statscan.py  ingest_synthetic.py  run_all.py
implementations/sme_capitalAllocation/src/sme_capital_eval/datasets/: capital_case.py  case_loader.py
implementations/sme_capitalAllocation/src/sme_capital_eval/eval/: error_taxonomy.py  eval_outputs.py  eval_traces.py  judge.py  summarize.py
implementations/sme_capitalAllocation/src/sme_capital_eval/langfuse_integration/: client.py  tracing.py
implementations/sme_capitalAllocation/src/sme_capital_eval/mep/: schema.py  writer.py
implementations/sme_capitalAllocation/src/sme_capital_eval/runner/: run_generate_meps.py
implementations/sme_capitalAllocation/src/sme_capital_eval/tools/: financial_calc_tool.py  policy_retrieval_tool.py  statscan_query_tool.py
implementations/sme_capitalAllocation/src/sme_capital_eval/utils/: json_strict.py  llm_adapter.py  timing.py
implementations/xai_refresher/: README.md  attention_vs_attribution.ipynb  perturbation_robustness_and_bias_text.ipynb  perturbation_robustness_captum_image.ipynb  tcav_concept_sensitivity.ipynb
