[project]
name = "interpretability-agent-bootcamp"
version = "0.1.0"
description = ""
authors = [ {name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
readme = "README.md"
repository = "https://github.com/VectorInstitute/interpretability_agent_bootcamp"
requires-python = ">=3.10,<3.13"
require-environment = true
dependencies = [
    "aieng-topic-impl",
    "gdown>=5.2.1",
    "jupyterlab>=4.4.8",
    "openai>=2.8.0",
    "prettytable>=3.17.0",
    "timm>=1.0.24",
    "transformers>=5.0.0",
    "wget>=3.2",
    "ipywidgets",
]

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "mypy>=1.14.1",
    "nbqa>=1.9.1",
    "pip-audit>=2.7.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.2",
]

# Placeholder groups for future reference implementations (fill as needed)
ref1-refresher-interpretability = [
    "torch<=2.8.0",
    "torchvision==0.19.1",
    "tensorflow==2.17.0",
    "keras==3.9.1",
    "joblib==1.2.0",
    "imblearn",
    "deap",
    "bitarray",
    "sphinx~=5.0",
    "furo",
    "sphinx_rtd_theme~=1.2.0",
    "sphinx_material",
    "category_encoders",
    "scikit-multilearn~=0.2.0",
    "arff~=0.9",
    "ucimlrepo",
    "gower==0.1.2",
    "matplotlib==3.10.5",
    "numpy>=1.26,<2.0",
    "pandas==2.3.2",
    "plotly==6.3.0",
    "scikit_learn==1.7.1",
    "scipy>=1.9,<1.12",
    "seaborn==0.13.2",
    "ts3l==0.70",
    "efficientnet==1.1.1",
    "lime==0.2.0.1",
    "networkx==3.3",
    "opencv_python==4.10.0.84",
    "Pillow==11.1.0",
    "segment_anything==1.0",
    "scikit-image",
    "tqdm==4.66.5",
    "cython>=3.2.4",
    "kagglehub[pandas-datasets]>=0.4.1",
    "shap>=0.49.1",
    "ttach>=0.0.3",
    "ultralytics>=8.4.9",
    "nnsight>=0.5.15",
    "openai-clip>=1.0.1",
    "einops>=0.8.2",
    "baukit",
    "lore-sa",
    "xlrd>=2.0.2",
    "grad-cam>=1.5.5",
    "language-evaluation",
]

ref2-transparency-xai-toxicity = [
    # "pkg-two>=0.1.0",
]

ref3-mechanistic-interpretability = [
    # "pkg-three>=0.1.0",
]

ref4-llm-alignment-ethics = [
    # "pkg-four>=0.1.0",
]

ref5-multimedia-rag-vlm = [
    # "pkg-five>=0.1.0",
]

ref6-agentic-xai-eval = [
    # "pkg-six>=0.1.0",
]

[tool.uv.workspace]
members = [
  "aieng-topic-impl",
]

[tool.uv]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
aieng-topic-impl = { workspace = true }
baukit = { git = "https://github.com/davidbau/baukit", rev = "9d51abd51ebf29769aecc38c4cbef459b731a36e" }
lore-sa = { git = "https://github.com/kdd-lab/LORE_sa.git", rev = "main" }
language-evaluation = { git = "https://github.com/bckim92/language-evaluation.git" }

[tool.mypy]
ignore_missing_imports = true
install_types = true
pretty = true
namespace_packages = true
explicit_package_bases = true
non_interactive = true
warn_unused_configs = true
allow_any_generics = false
allow_subclassing_any = false
allow_untyped_calls = false
allow_untyped_defs = false
allow_incomplete_defs = false
check_untyped_defs = true
allow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
extra_checks = true

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle
    "N", # pep8-naming
    "ERA", # eradicate
    "PL", # pylint
]
fixable = ["A", "B", "COM", "C4", "RET", "SIM", "ICN", "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL"]
ignore = [
    "B905", # `zip()` without an explicit `strict=` parameter
    "E501", # line too long
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "PLR2004", # Replace magic number with named constant
    "PLR0913", # Too many arguments
    "COM812", # Missing trailing comma
]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"*.ipynb" = ["ERA001", "W505", "D401", "D400", "D200", "D100", "D103", "D205", "N806", "C416"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.pytest.ini_options]
markers = [
    "integration_test: marks tests as integration tests",
]
