[project]
name = "bias-fairness-analysis"
version = "0.1.0"
description = "Zero-shot bias analysis and fairness evaluation with interpretability (Integrated Gradients)."
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [
    { name = "Vector AI Engineering" }
]
license = { text = "MIT" }

dependencies = [
    "accelerate==1.12.0",
    "datasets==4.0.0",
    "ipywidgets==8.1.8",
    "ipykernel",
    "jupyterlab",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "pyarrow==15.0.2",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "torch==2.2.2",
    "transformers==4.38.2",
    "tqdm==4.67.3",
    "matplotlib>=3.10.8",
    "rich>=14.3.3",
    "kaggle>=1.7.4.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
