[project]
name = "video-rag"
version = "0.1.0"
description = "Multimedia RAG + VLM stack"
requires-python = ">=3.10,<3.11"
dependencies = []

[dependency-groups]

ref5-multimedia-rag-vlm = [
    "annotated-doc==0.0.4",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.12.1",
    "asttokens==3.0.1",
    "av==14.2.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "click==8.3.1",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decord==0.6.0",
    "decorator==5.2.1",
    "einops==0.8.2",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "filelock==3.24.3",
    "fsspec==2026.2.0",
    "ftfy==6.3.1",
    "fvcore==0.1.5.post20221221",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.4.1",
    "idna==3.11",
    "imagebind @ git+https://github.com/facebookresearch/ImageBind.git@53680b02d7e37b19b124fa37bae4b6c98c38f5be#egg=imagebind",
    "iopath==0.1.10",
    "ipykernel==7.2.0",
    "ipython==8.38.0",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "jupyter_client==8.8.0",
    "jupyter_core==5.9.1",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "omegaconf==2.3.0",
    "packaging==26.0",
    "pandas==2.3.3",
    "parameterized==0.9.0",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.2",
    "portalocker==3.2.0",
    "prompt_toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pycparser==3.0",
    "Pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pytorchvideo @ git+https://github.com/facebookresearch/pytorchvideo.git@6cdc929315aab1b5674b6dcf73b16ec99147735f",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "pyzmq==27.1.0",
    "regex==2026.2.19",
    "rich==14.3.3",
    "safetensors==0.7.0",
    "setuptools<81",
    "shellingham==1.5.4",
    "six==1.17.0",
    "soundfile==0.13.1",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "termcolor==3.3.0",
    "timm==1.0.24",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tornado==6.5.4",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "triton==3.2.0",
    "typer==0.24.1",
    "typer-slim==0.24.0",
    "types-regex==2026.2.19.20260221",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "wcwidth==0.6.0",
    "yacs==0.1.8",
]

ref5-multimedia-rag-vlm-qa = [
    "accelerate==1.12.0",
    "annotated-doc==0.0.4",
    "anyio==4.12.1",
    "asttokens==3.0.1",
    "audioread==3.1.0",
    "av==14.2.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "comm==0.2.3",
    "debugpy==1.8.20",
    "decord",
    "decorator==5.2.1",
    "einops==0.8.2",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "filelock==3.24.3",
    "fsspec==2026.2.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.4.1",
    "idna==3.11",
    "imagebind @ git+https://github.com/facebookresearch/ImageBind.git@53680b02d7e37b19b124fa37bae4b6c98c38f5be#egg=imagebind",
    "ipykernel==7.2.0",
    "ipython==8.38.0",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "joblib==1.5.3",
    "jupyter_client==8.8.0",
    "jupyter_core==5.9.1",
    "lazy_loader==0.4",
    "librosa==0.11.0",
    "llvmlite==0.46.0",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numba==0.64.0",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "packaging==26.0",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.2",
    "pooch==1.9.0",
    "prompt_toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pycparser==3.0",
    "Pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.3",
    "pyzmq==27.1.0",
    "qwen-omni-utils==0.0.9",
    "regex==2026.2.19",
    "requests==2.32.5",
    "rich==14.3.3",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "sentencepiece==0.2.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "soundfile==0.13.1",
    "soxr==1.0.0",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "timm==1.0.24",
    "tokenizers==0.22.2",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tornado==6.5.4",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "transformers==5.2.0",
    "triton==3.2.0",
    "typer==0.24.1",
    "typer-slim==0.24.0",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
]

[tool.uv]
environments = [
  "python_version >= '3.10' and python_version <= '3.11' and sys_platform == 'linux'"
]
